# youtube-to-whisper-cpp

./: .gitignore  README.md  log_tools.py  main.py  pyproject.toml
app/: whispercc.py  youtube_dl.py
src/: __main__.py  config.py  debug_tools.py  log_tools.py  main.py
src/app/: audio_tools.py  whispercc.py  youtube_dl.py
src/tests/: test_audio_tools.py  test_file_operations.py  test_whispercc.py  test_youtube_dl.py
src/utils/: file_operations.py
tests/: test_audio_tools.py  test_file_operations.py  test_whispercc.py  test_youtube_dl.py
